--- a/app/src/main/res/layout/content_exams.xml
+++ b/app/src/main/res/layout/content_exams.xml
@@ -13,9 +13,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/exams_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".ExamsActivity" />
 
     <TextView
