--- a/app/src/main/res/layout/content_subjects_select_career.xml
+++ b/app/src/main/res/layout/content_subjects_select_career.xml
@@ -12,8 +12,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/subjects_select_career_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/screen_title"
